tests/rosetta/out/Java/circles-of-given-radius-through-two-points.error
javac error: exit status 1
/tmp/TestMochiToJavacircles-of-given-radius-through-two-points3840323616/001/CirclesOfGivenRadiusThroughTwoPoints.java:34: error: cannot find symbol
    static List<any> circles(Point p1, Point p2, double r) {
                ^
  symbol:   class any
  location: class CirclesOfGivenRadiusThroughTwoPoints
/tmp/TestMochiToJavacircles-of-given-radius-through-two-points3840323616/001/CirclesOfGivenRadiusThroughTwoPoints.java:66: error: incompatible types: cannot infer type arguments for ArrayList<>
    List<List<Point>> td = new ArrayList<>(Arrays.asList(Arrays.asList(new Point(0.123400, 0.987600), new Point(0.876500, 0.234500), 2.000000), Arrays.asList(new Point(0.000000, 2.000000), new Point(0.000000, 0.000000), 1.000000), Arrays.asList(new Point(0.123400, 0.987600), new Point(0.123400, 0.987600), 2.000000), Arrays.asList(new Point(0.123400, 0.987600), new Point(0.876500, 0.234500), 0.500000), Arrays.asList(new Point(0.123400, 0.987600), new Point(0.123400, 0.987600), 0.000000)));
                                        ^
    reason: inference variable T has incompatible bounds
      equality constraints: Point
      lower bounds: Double,Point
  where T is a type-variable:
    T extends Object declared in method <T>asList(T...)
/tmp/TestMochiToJavacircles-of-given-radius-through-two-points3840323616/001/CirclesOfGivenRadiusThroughTwoPoints.java:68: error: incompatible types: Point cannot be converted to List<Point>
        List<Point> p1 = tc.get(0);
                               ^
/tmp/TestMochiToJavacircles-of-given-radius-through-two-points3840323616/001/CirclesOfGivenRadiusThroughTwoPoints.java:69: error: incompatible types: Point cannot be converted to List<Point>
        List<Point> p2 = tc.get(1);
                               ^
/tmp/TestMochiToJavacircles-of-given-radius-through-two-points3840323616/001/CirclesOfGivenRadiusThroughTwoPoints.java:70: error: incompatible types: Point cannot be converted to List<Point>
        List<Point> r = tc.get(2);
                              ^
/tmp/TestMochiToJavacircles-of-given-radius-through-two-points3840323616/001/CirclesOfGivenRadiusThroughTwoPoints.java:71: error: cannot find symbol
        System.out.println("p1:  {" + String.valueOf(p1.x) + " " + String.valueOf(p1.y) + "}");
                                                       ^
  symbol:   variable x
  location: variable p1 of type List<Point>
/tmp/TestMochiToJavacircles-of-given-radius-through-two-points3840323616/001/CirclesOfGivenRadiusThroughTwoPoints.java:71: error: cannot find symbol
        System.out.println("p1:  {" + String.valueOf(p1.x) + " " + String.valueOf(p1.y) + "}");
                                                                                    ^
  symbol:   variable y
  location: variable p1 of type List<Point>
/tmp/TestMochiToJavacircles-of-given-radius-through-two-points3840323616/001/CirclesOfGivenRadiusThroughTwoPoints.java:72: error: cannot find symbol
        System.out.println("p2:  {" + String.valueOf(p2.x) + " " + String.valueOf(p2.y) + "}");
                                                       ^
  symbol:   variable x
  location: variable p2 of type List<Point>
/tmp/TestMochiToJavacircles-of-given-radius-through-two-points3840323616/001/CirclesOfGivenRadiusThroughTwoPoints.java:72: error: cannot find symbol
        System.out.println("p2:  {" + String.valueOf(p2.x) + " " + String.valueOf(p2.y) + "}");
                                                                                    ^
  symbol:   variable y
  location: variable p2 of type List<Point>
/tmp/TestMochiToJavacircles-of-given-radius-through-two-points3840323616/001/CirclesOfGivenRadiusThroughTwoPoints.java:74: error: cannot find symbol
        List<any> res = circles(p1, p2, r);
             ^
  symbol:   class any
  location: class CirclesOfGivenRadiusThroughTwoPoints
/tmp/TestMochiToJavacircles-of-given-radius-through-two-points3840323616/001/CirclesOfGivenRadiusThroughTwoPoints.java:74: error: incompatible types: List<Point> cannot be converted to Point
        List<any> res = circles(p1, p2, r);
                                ^
/tmp/TestMochiToJavacircles-of-given-radius-through-two-points3840323616/001/CirclesOfGivenRadiusThroughTwoPoints.java:75: error: cannot find symbol
        List<any> c1 = res.get(0);
             ^
  symbol:   class any
  location: class CirclesOfGivenRadiusThroughTwoPoints
/tmp/TestMochiToJavacircles-of-given-radius-through-two-points3840323616/001/CirclesOfGivenRadiusThroughTwoPoints.java:76: error: cannot find symbol
        List<any> c2 = res.get(1);
             ^
  symbol:   class any
  location: class CirclesOfGivenRadiusThroughTwoPoints
/tmp/TestMochiToJavacircles-of-given-radius-through-two-points3840323616/001/CirclesOfGivenRadiusThroughTwoPoints.java:77: error: cannot find symbol
        List<any> caseStr = res.get(2);
             ^
  symbol:   class any
  location: class CirclesOfGivenRadiusThroughTwoPoints
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
14 errors
